Recompiled pikchr.js/wasm with latest emscripten. Fixed a left-shifted SVG truncation case. Ported example script selection from legacy pikchrshow into the new version.
FossilOrigin-Name: 6c07b28636dac56ab54b7b4c21bb467b96f3b81f0ed7947943c393d2179a13aa

--- a/src/style.pikchrshow.css
+++ b/src/style.pikchrshow.css
@@ -88,7 +88,7 @@ textarea {
 }
 #pikchr-output {
   padding: 0;
-  margin: 0;
+  margin: 0 auto/*auto resolves a weird left-shift truncation of the SVG*/;
 }
 #pikchr-output-wrapper {
   flex: 1 1 auto;
